# FL-DL

./: .gitignore  DLG_time_series2image (1).ipynb  README.md  loss_FL.npy  prediction_cen.txt  prediction_fl.txt  pyproject.toml  pyprojectbackup.toml  real_consumption_client21.txt  requirements-conda.txt  results30DNN.npz
.devcontainer/: Dockerfile  devcontainer.json  dockerfile.ubuntu
FL/: CNN_DL.py  CNN_FL.py  DNN_DL.py  DNN_FL.py  LSTM_DL.py  LSTM_FL.py  NN_models.py  Tony_CNN.py  Tony_DNN.py  Tony_DNN_FL.ipynb  Tony_DNN_FL.py  Tony_LSTM.py  Tony_wavenet.py  requirements.txt  tf-fed.yml  wavenet_DL.py  wavenet_FL.py
flwr/: Models.py  flwr_FL_CNN.py  flwr_FL_DNN.py  flwr_FL_DNN_clean (1).ipynb  flwr_FL_DNN_predict.ipynb  flwr_FL_WaveNet.py  flwr_FL_WaveNet_clean.ipynb  flwr_WaveNet.py  flwr_central_DNN_clean.ipynb  readme.md  trainingplot.py
